<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/gestures">

        <PreferenceScreen
                android:key="screen_gestures"
                android:fragment="com.asus.zenmotions.settings.ScreenOffGestureSettings"
                android:summary="@string/gestures_dashboard_summary"
                android:icon="@drawable/ic_gesture"
                android:title="@string/screen_off_gestures" />

    </PreferenceCategory>
	
	
	<PreferenceCategory
            android:title="@string/ambient_display_title">

        <PreferenceScreen
                android:key="ambient_display_gestures"
                android:fragment="com.asus.zemotions.gestures.AmbientGesturePreferenceActivity"
                android:summary="@string/ambient_display_gestures_summary"
                android:icon="@drawable/ic_doze"
                android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

</PreferenceScreen>
